refactor unit tests