@@ -17,8 +17,8 @@ repositories {
 	mavenCentral()
 }
 
-ext {
-	set('springAiVersion', "1.1.2")
+configurations {
+    mockitoAgent
 }
 
 dependencies {
@@ -30,22 +30,22 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.42'
     annotationProcessor 'org.projectlombok:lombok:1.18.42'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+	testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+	testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
 
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
-	}
+	testCompileOnly 'org.projectlombok:lombok:1.18.42'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'
+
+    mockitoAgent('org.mockito:mockito-core:5.21.0') { transitive = false }
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs("-javaagent:${configurations.mockitoAgent.asPath}")
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 jacocoTestReport {
